# zeromqWin64Cpp

./: README.md
0.libzmq-master/: CMakeCache.txt
0.libzmq-master/tests/: CMakeLists.txt
0.libzmq-master/unittests/: CMakeLists.txt
1.cppzmq/tests/: CMakeLists.txt
3.zmqCppDemo/: client.cpp
4.zmqCppMTcpDemo/: CMakeLists.txt  client.cpp
5.cppZeroMQ/lib/pkgconfig/: libzmq.pc
